# ALnn

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_alnn.py
ALnn/: __init__.py  nn.py
